group playlist creation implemented: create a group, add songs, delete songs, change group name.  CRUDL implemented